--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,4 @@
-osx_image: xcode10.1
-language: objective-c
-cache: bundler
-
-before_install:
-- bundle install
-- bundle exec pod repo update --silent
-
-env:
-- TASK=rubocop
-- TASK="rake spec:unit"
-- TASK="rake spec:integration"
-- TASK="rake spec:command"
-
-script:
-- bundle exec $TASK
-
+End
+Delete
+Void
+Termination 
